<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    tools:context=".AddEventAct">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:background="@drawable/bg_btn_blue_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view2"
                android:layout_width="365dp"
                android:layout_height="330dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/bg_add_event"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_marginTop="80dp"
                android:layout_marginBottom="30dp"
                android:id="@+id/layoutImage"
                android:layout_width="410dp"
                android:layout_height="310dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/Ivawal"
                    android:layout_width="350dp"
                    android:layout_height="310dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/bg_pict_event" />

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="350dp"
                    android:layout_height="310dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp">

                    <ImageView
                        android:id="@+id/iv_pict_event"
                        android:layout_width="350dp"
                        android:layout_height="310dp"

                        />
                </com.github.florent37.shapeofview.shapes.RoundRectView>


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/Ivawal"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="11dp"
                    android:layout_marginBottom="6dp"
                    android:backgroundTint="@color/BluePrimary"
                    android:src="@drawable/ic_add_white" />

            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/layoutMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutImage"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="20dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/EtNama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:hint="@string/nama"
                            android:inputType="textPersonName|textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/EtTanggal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:hint="@string/tanggal"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/reglink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:hint="Register Link"
                            android:inputType="textPersonName|textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/EtTempat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:hint="@string/tempat"
                            android:inputType="textPersonName|textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/Etkategori"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:hint="Kategori"
                            android:inputType="textPersonName|textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/EtDeskripsi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:hint="@string/deskripsi"
                            android:inputType="textMultiLine"
                            android:minLines="5" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Add Event"
                android:textColor="#fff"
                android:id="@+id/submitEvent"
                android:background="@drawable/bg_btn_blue_primary"
                android:layout_below="@+id/layoutMain"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="60dp"/>
        </RelativeLayout>
    </ScrollView>


    <include
        android:id="@+id/include"
        layout="@layout/appbar_add_event" />


</androidx.constraintlayout.widget.ConstraintLayout>